[tool.poetry]
name = "refugee-alert-bot"
version = "0.1.0"
description = "A Telegram bot to forward refugee emergency alerts."
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.0"
# Optional: if you need dotenv support
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"